# FastXC

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.deploy  README.en.md  README.md  README.zh-CN.md  REANDME.zh-CN.md  Readme_zh.docx  agent.md  changelog.md  commit_message.txt  log_test_file.txt  pyproject.toml  run.py  sac2spec_cmd_gen.py  setup.py  stack_list_list.txt  test_file_util.py  test_gen_ncf_stack_cmd.py  test_gen_sac2_spec_cmd.py  test_gen_xc_cmd.py  test_mksaclist.py
FastXC/: __init__.py  file_list_utils.py  make_sac_list.py  ncfstack_cmd_gen.py  sac2spec_cmd_gen.py  specxc_cmd_gen.py
FastXC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
changelog/: 2026-05-28-sac2spec-spack-xcache.md
config/: jilongshan.ini  test.ini
docs/: ARCHITECTURE.md  CONFIGURATION.md  OUTPUTS.md  README.md  RESULTS.md  TOOLS.md
docs_EN/: ARCHITECTURE.md  CONFIGURATION.md  OUTPUTS.md  README.md  RESULTS.md  TOOLS.md
docs_ZH/: ARCHITECTURE.md  CONFIGURATION.md  OUTPUTS.md  README.md  RESULTS.md  TOOLS.md
example/: README.md  config.ini  plot_rtz_distance_lines.py
fastxc/: Makefile  __init__.py  cli.py  cmd_StackRotate_utils.py  cmd_sac2spec_utils.py  cmd_xc_utils.py  config_parse.py  controller.py  deployer_StackRotate.py  deployer_sac2dat.py  deployer_sac2spec.py  deployer_xc.py  design_filter.py  fastxc.py  gen_rotate_list_dir.py  gen_sac2spec_list_dir.py  gen_stack_list_dir.py  gen_xc_list_dir.py
native/: Makefile  common.mk  detect_cuda_archs.sh  progress_sidecar.hpp
test_fastxc/: saclist.txt  stalist.txt  test.py
tools/: check_gpu  (+6 more)
(+848 files in other folders)
